# striprouter

./: Cargo.toml  LICENSE  README.md
circuits/: example.circuit
src/: board.rs  circuit.rs  circuit_parser.rs  controls.rs  ga_core.rs  ga_interface.rs  gui.rs  gui_status.cpp  layout.cpp  layout.h  layout.rs  main.cpp  main.rs  nets.rs  render.rs  router.cpp  router.h  router.rs  router_control.rs  router_thread.rs  settings.rs  status.rs  thread_stop.rs  ucs.cpp  ucs.h  ucs.rs  ui.rs  util.rs  via.rs
tests/: tests.rs
